<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	  <item
    android:id="@id/CREATE_COMMAND"
    android:icon="@android:drawable/ic_menu_add"
    android:showAsAction="always"
    android:title="@string/menu_new">
  </item>
</menu>
