<?xml version="1.0" encoding="utf-8"?>


<Button
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bOK"
    style="@style/CalculatorButtonBase"
    android:layout_width="0dp"
    android:layout_weight="1"
    android:ellipsize="end"
    android:text="@android:string/ok"
    tools:showIn="@layout/ok_cancel_buttons"
    android:maxLines="1"/>