<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="@layout/one_expense">

    <org.totschnig.myexpenses.ui.DateButton
        android:id="@+id/DateButton"
        style="@style/SmallButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:hint="@string/date" />

    <ImageView
        android:id="@+id/DateLink"
        style="?actionButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/content_description_dates_are_not_linked"
        android:focusable="true"
        android:minWidth="@dimen/dateLink_minWidth"
        android:paddingStart="@dimen/dateLink_padding"
        android:paddingEnd="@dimen/dateLink_padding"
        android:visibility="gone"
        app:srcCompat="@drawable/ic_link_off" />

    <org.totschnig.myexpenses.ui.DateButton
        android:id="@+id/Date2Button"
        style="@style/SmallButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:visibility="gone" />

    <org.totschnig.myexpenses.ui.TimeButton
        android:id="@+id/TimeButton"
        style="@style/SmallButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="4dp"
        android:layout_weight="1"
        android:hint="@string/time" />
</merge>