...
        <!-- fraction digits -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_currency_fraction_digits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/number_of_fraction_digits"
                android:inputType="number"
                android:maxLength="1"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/warning_change_fraction_digits_checkbox_label"
            android:visibility="gone" />

        <TextView
...
