...

    <TextView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/BankDetails"
        app:layout_constraintStart_toEndOf="@id/checkBox"
        android:drawablePadding="2dp"
        android:id="@+id/Payee"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        tools:text="Joan Doe"
        android:textAppearance="?android:attr/textAppearanceListItemSmall" />

...
