...
  along with My Expenses.  If not, see <http://www.gnu.org/licenses/>.
 -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@id/SEARCH_COMMAND"
        android:checkable="true"
        android:icon="@drawable/ic_menu_search"
        android:orderInCategory="10"
        android:title="@string/menu_search"
        app:showAsAction="always">
        <menu>
...
                    android:title="@string/category" />
                <item
                    android:id="@id/FILTER_AMOUNT_COMMAND"
                    android:title="@string/amount" />
                <item
                    android:id="@id/FILTER_COMMENT_COMMAND"
                    android:title="@string/comment" />
                <item
                    android:id="@id/FILTER_STATUS_COMMAND"
                    android:enabled="false"
                    android:title="@string/status" />
                <item
                    android:id="@id/FILTER_PAYEE_COMMAND"
...
